--- a/css/mori.css
+++ b/css/mori.css
@@ -5,7 +5,6 @@ html::-webkit-scrollbar-thumb{height:40px;background-color:#999;}
 html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
 */
 .post-content p,.post-content li{
-  text-indent: 2em;
   font-size: 16px;
   letter-spacing: .6px;
   text-align: justify;
@@ -58,30 +57,30 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
   font-size: 14px;
 }
 .post-content blockquote:before {
-    font-family: 'Material-Design-Iconic-Font';
-    color: #ffebee;
-    content: "\f1b2";
-    -webkit-transform: rotate(180deg);
-        -ms-transform: rotate(180deg);
-            transform: rotate(180deg);
-    font-size:2em;
-    position: absolute;
-    left: 8px;
-    top: 12px;
-    line-height: .1em;
+  font-family: 'Material-Design-Iconic-Font';
+  color: #ffebee;
+  content: "\f1b2";
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+  font-size:2em;
+  position: absolute;
+  left: 8px;
+  top: 12px;
+  line-height: .1em;
 }
 .post-content blockquote:after {
-    font-family: 'Material-Design-Iconic-Font';
-    color: #ffebee;
-    content: "\f1b2";
-    font-size:5em;
-    position: absolute;
-    right: 8px;
-    bottom: 0px;
-    line-height: .1em;
+  font-family: 'Material-Design-Iconic-Font';
+  color: #ffebee;
+  content: "\f1b2";
+  font-size:5em;
+  position: absolute;
+  right: 8px;
+  bottom: 0px;
+  line-height: .1em;
 }
 .post-content blockquote strong {
-    font-size:16px;
+  font-size:16px;
 }
 .post-content p img{
   box-shadow: 0 2px 15px 1px rgba(0,0,0,0.1);
@@ -96,4 +95,66 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
 }
 .description p{
   font-size: 17px;
+}
+/* post-tags /// CSS部分来自 https://www.linpx.com/ */
+.post-tags {
+  margin: 0;
+  padding: 5px 0 15px;
+}
+.post-tags a:nth-child(1n) {
+  color: #fff;
+  border: 1px solid #f8bbd0;
+  border-radius: 15px;
+  background: #f8bbd0;
+}
+.post-tags a {
+  font-size: 13px;
+  font-weight: 600;
+  display: inline-block;
+  margin: 4px 8px 0 0;
+  padding: 0 15px;
+  -webkit-transition-duration: .4s;
+  transition-duration: .4s;
+  letter-spacing: 0;
+}
+.post-tags a:hover {
+  color:#f8bbd0;
+  background:#fff;
+}
+/* --- */
+.arc-t {
+  width:33.3%;
+  float:left;
+  position:relative;
+  min-height:1px;
+  padding-right:5px;
+  padding-left:5px;
+}
+.arc-tile {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  position: relative;
+  padding: 14px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(184,197,214,.2);
+  border-radius: 6px;
+  background: #fff;
+  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.04);
+  box-shadow: 0 1px 4px rgba(0,0,0,.04);
+}
+.arc-date {
+  color: #5f5f5f;
+  font-size: 12px;
+  position: relative;
+}
+@media (max-width: 992px){
+  .arc-t {
+  width:50%;
+  }
+}
+@media (max-width: 768px){
+  .arc-t {
+  width:100%;
+  }
 }
