--- a/css/mori.css
+++ b/css/mori.css
@@ -205,6 +205,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
   padding-left:5px;
 }
 .arc-tile {
+  line-height: 20px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -224,7 +225,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
 }
 @media (max-width: 992px){
   .arc-t {
-  width:50%;
+    width:50%;
   }
   .post-tor-content {
     display: none;
@@ -235,7 +236,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
 }
 @media (max-width: 768px){
   .arc-t {
-  width:100%;
+    width:100%;
   }
   .post-tor-content{
     display: none;
