--- a/css/mori.css
+++ b/css/mori.css
@@ -198,6 +198,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
 .post-info {
   margin: 0;
   padding: 5px 0 15px;
+  margin-bottom: 20px;
 }
 .post-info a:nth-child(1n) {
   color: #fff;
