--- a/css/mori.css
+++ b/css/mori.css
@@ -53,7 +53,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
 /* end */
 .text-bar {
   color: #34495e;
-  text-align: center;
+  text-align: right;
   margin-top: -6px;
   font-size: 22px;
 }
@@ -198,7 +198,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
 .post-info {
   margin: 0;
   padding: 5px 0 15px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 .post-info a:nth-child(1n) {
   color: #fff;
