--- a/css/mori.css
+++ b/css/mori.css
@@ -1,9 +1,8 @@
-/*
-html::-webkit-scrollbar-track-piece{background:#222;}
+html::-webkit-scrollbar-track-piece{}
 html::-webkit-scrollbar{width:8px;height:8px;}
-html::-webkit-scrollbar-thumb{height:40px;background-color:#999;}
-html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
-*/
+html::-webkit-scrollbar-thumb{height:40px;background-color:#eee; border-radius: 16px;}
+html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
+
 /* PostTor CSS */
 .post-tor-content {
   position: relative;
@@ -68,9 +67,13 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
   letter-spacing: .6px;
   text-align: justify;
 }
+.post-content h3 {
+  font-size: 37px;
+}
 .post-content h4 {
+  font-size: 26px;
   color:#78909c;
-  font-weight: normal;
+  font-weight: 400;
   margin-top: 30px;
   margin-bottom: 20px;
   margin-left: -10px;
@@ -85,8 +88,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
 .post-content h6{
   color:#78909c;
   font-weight: normal;
-  margin-top: 30px;
-  margin-bottom: 20px;
+  font-size: 23px;
   margin-left: -2px;
 }
 .post-content h4::before{
@@ -174,25 +176,49 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
   margin: 0;
   padding: 5px 0 15px;
 }
-.post-tags a:nth-child(1n) {
-  color: #fff;
-  border: 1px solid #f8bbd0;
+.post-tags .post-list a:nth-child(1n) {
+  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.1);
+  box-shadow: 0 1px 4px rgba(0,0,0,.1);
+  border: 1px solid #fff;
   border-radius: 15px;
-  background: #f8bbd0;
+  color: rgba(51, 51, 51, 0.78);
 }
-.post-tags a {
-  font-size: 13px;
-  font-weight: 600;
-  display: inline-block;
+.post-tags .post-list a {
   margin: 4px 8px 0 0;
-  padding: 0 15px;
+  font-size: 13px;
+  font-weight: 350;
+  display: inline-block;
+  padding: 0 12px;
   -webkit-transition-duration: .4s;
   transition-duration: .4s;
   letter-spacing: 0;
 }
-.post-tags a:hover {
-  color:#f8bbd0;
-  background:#fff;
+.post-tags .post-list a:hover {
+  color:rgb(51, 51, 51);
+}
+.post-tags .tags-list a:nth-child(1n) {
+  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.1);
+  box-shadow: 0 1px 4px rgba(0,0,0,.1);
+  border: 1px solid #fff;
+  border-radius: 15px;
+  color: rgba(51, 51, 51, 0.78);
+}
+.post-tags .tags-list a::before {
+  content:"# ";
+  color: #e8a6a6;
+}
+.post-tags .tags-list a {
+  margin: 4px 8px 0 0;
+  font-size: 12px;
+  font-weight: 350;
+  display: inline-block;
+  padding: 0 12px;
+  -webkit-transition-duration: .4s;
+  transition-duration: .4s;
+  letter-spacing: 0;
+}
+.post-tags .tags-list a:hover {
+  color:rgb(51, 51, 51);
 }
 .post-info {
   margin: 0;
@@ -251,14 +277,14 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
   font-size: 12px;
   position: relative;
 }
+.bottomtool {
+  margin:10px;
+}
 @media (max-width: 992px){
   .arc-t {
     width:50%;
   }
   .post-tor-content {
-    display: none;
-  }
-  .text-bar {
     display: none;
   }
 }
@@ -269,11 +295,11 @@ html::-webkit-scrollbar-thumb:hover{background-color:#AAA;} \e641
   .post-tor-content{
     display: none;
   }
-  .text-bar {
-    display: none;
+  #bottomtools ul{
+    padding: 2px;
   }
-  .post-info {
-    text-align: left;
+  .comment_reply {
+    display: block !important;
   }
 }
 .tarc-t {
