--- a/css/mori.css
+++ b/css/mori.css
@@ -62,16 +62,47 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
 .text-bar a:hover,.text-bar a:visited,.text-bar a:focus {
   color: #34495e;
 }
+.cover-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 3em;
+  height: 50vw;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  max-width: 100vw;
+}
+@media (min-width: 768px){
+  .cover-image {
+    height: 40vw;
+    max-height: 400px;
+  }
+}
 .post-content p,.post-content li {
   font-size: 16px;
   letter-spacing: .6px;
   text-align: justify;
 }
+.post-content figcaption {
+  text-align: center;
+  color: #999;
+  font-style: italic;
+  font-size: 15px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  font-weight: 300;
+}
 .post-content h3 {
   font-size: 37px;
+  margin-left: -1px;
 }
 .post-content h4 {
-  font-size: 26px;
+  font-size: 23px;
   color:#78909c;
   font-weight: 400;
   margin-top: 30px;
@@ -84,11 +115,13 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
   margin-top: 30px;
   margin-bottom: 20px;
   margin-left: -3px;
+  font-size: 24px;
 }
 .post-content h6{
   color:#78909c;
   font-weight: normal;
   font-size: 23px;
+  font-weight: 300;
   margin-left: -2px;
 }
 .post-content h4::before{
@@ -249,6 +282,9 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
 .post-info a::before {
   content: '# ';
 }
+.post-info .post-info-n a::before {
+  content: '';
+}
 /* --- */
 .arc-t {
   width:33.3%;
@@ -300,6 +336,10 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
   }
   .comment_reply {
     display: block !important;
+  }
+  .post-content ul,.post-list,.tags-list {
+    margin-left: -1em;
+    margin-right: 1em;
   }
 }
 .tarc-t {
