--- a/css/mori.css
+++ b/css/mori.css
@@ -3,6 +3,18 @@ html::-webkit-scrollbar{width:8px;height:8px;}
 html::-webkit-scrollbar-thumb{height:40px;background-color:#eee; border-radius: 16px;}
 html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
 
+body::before {
+  content: '';
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  opacity: .05;
+  z-index: -1;
+  position: fixed;
+  background-color: #fff;
+}
 /* PostTor CSS */
 .post-tor-content {
   position: relative;
@@ -83,6 +95,9 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
     max-height: 400px;
   }
 }
+hr {
+  border-top: 1px dashed #cfd8dc7a!important;
+}
 .post-content p,.post-content li {
   font-size: 16px;
   letter-spacing: .6px;
@@ -97,47 +112,66 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
   margin-bottom: 15px;
   font-weight: 300;
 }
+.post-content h1 {
+  font-size: 2.4em;
+  margin-left: -1px;
+}
+.post-content h2 {
+  font-size: 1.8em;
+  margin-left: -1px;
+}
 .post-content h3 {
-  font-size: 37px;
+  font-size: 1.6em;
   margin-left: -1px;
 }
 .post-content h4 {
-  font-size: 23px;
-  color:#78909c;
+  font-size: 1.1em;
+  color:#546e7a;
   font-weight: 400;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  margin-left: -10px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  margin-left: -.5em;
+}
+.post-content h4::before{
+  margin-right: 6px;
+  content: "#"; 
+  color:#e8a6a6;
 }
 .post-content h5 {
-  color:#78909c;
+  color:#546e7a;
   font-weight: normal;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  margin-left: -3px;
-  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: -2px;
+  font-size: 1.1em;
+}
+.post-content h5::before {
+  color:#546e7a;
+  font-family: 'Material-Design-Iconic-Font';
+  margin-right: 6px;
+  content: "\f184"; 
 }
 .post-content h6{
   color:#78909c;
   font-weight: normal;
-  font-size: 23px;
+  font-size: 1em;
   font-weight: 300;
   margin-left: -2px;
-}
-.post-content h4::before{
-  font-family: 'Flat-UI-Icons';
-  margin-right: 8px;
-  content: "#"; 
-  color:#e8a6a6;
 }
 .post-content ul li{
   text-indent: 0;
   list-style:none;
 }
+.post-content a{
+  color: #8d6e63;
+}
+.post-content a:hover{
+  color: #bcaaa4;
+}
 .post-content ul li::before{
   font-family: 'Material-Design-Iconic-Font';
-  color:#95A5A6;
-  margin-right: 4px;
+  color:#757575;
+  margin-right: 5px;
   content: "\f2fb";
 }
 .post-content ol li{
@@ -148,7 +182,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
   margin-right: 4px;
 }
 .post-content blockquote {
-  background-color: #FFFFFF;
+  background-color: #FFFFFF00;
   border:none;
   margin:0;
   padding:0;
@@ -162,7 +196,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
   margin:6px;
   text-indent: 0;
   color: #ef9a9a;
-  font-size: 14px;
+  font-size: 13px;
 }
 .post-content blockquote:before {
   font-family: 'Material-Design-Iconic-Font';
@@ -188,7 +222,7 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
   line-height: .1em;
 }
 .post-content blockquote strong {
-  font-size:16px;
+  font-size:15px;
 }
 .post-content p img{
   box-shadow: 0 2px 15px 1px rgba(0,0,0,0.1);
@@ -260,7 +294,6 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
 }
 .post-info a:nth-child(1n) {
   color: #fff;
-  border: 1px solid #f8bbd0;
   border-radius: 15px;
   background: #f8bbd0;
 }
@@ -269,15 +302,14 @@ html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
   font-weight: normal;
   display: inline-block;
   margin: 4px 8px 0 0;
-  padding: 0 15px;
+  padding: 1px 15px;
   -webkit-transition-duration: .4s;
   transition-duration: .4s;
   letter-spacing: 0;
 }
 .post-info a:hover {
-  border: 1px solid #fff;
   color:#f8bbd0;
-  background:#fff;
+  background:#fff0;
 }
 .post-info a::before {
   content: '# ';
