--- a/css/mori.css
+++ b/css/mori.css
@@ -1,11 +1,22 @@
-html::-webkit-scrollbar-track-piece{}
-html::-webkit-scrollbar{width:8px;height:8px;}
-html::-webkit-scrollbar-thumb{height:40px;background-color:#eee; border-radius: 16px;}
-html::-webkit-scrollbar-thumb:hover{background-color:#ddd;}
+html::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+html::-webkit-scrollbar-thumb {
+  height: 40px;
+  background-color: #eee;
+  border-radius: 16px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #ddd;
+}
 
 #instantclick-bar {
   background: none;
 }
+
 body::before {
   content: '';
   background-repeat: no-repeat;
@@ -24,15 +35,17 @@ body::before {
   filter: grayscale(100%);
   filter: gray;
 }
+
 /* PostTor CSS */
 .post-tor-content {
   position: relative;
   z-index: 0;
   width: 100%;
-  margin-right: auto!important;
-  margin-left: auto!important;
+  margin-right: auto !important;
+  margin-left: auto !important;
   text-align: right;
 }
+
 .post-tor {
   margin-left: 6px;
   border-left: 1px solid rgba(221, 221, 221, 0.32);
@@ -43,12 +56,14 @@ body::before {
   display: inline-block;
   text-align: left;
 }
+
 .torarc-t {
-  width:160px;
-  float:left;
-  position:relative;
-  min-height:1px;
+  width: 160px;
+  float: left;
+  position: relative;
+  min-height: 1px;
 }
+
 .torarc-tile {
   overflow: hidden;
   white-space: nowrap;
@@ -56,33 +71,42 @@ body::before {
   position: relative;
   padding: 6px;
 }
+
 .tori {
   font-weight: bold;
   color: #34495e;
 }
+
 .torii {
   margin-left: 2px;
   color: #5f5f5f;
 }
+
 .torii::before {
   font-family: 'Material-Design-Iconic-Font';
-  color:#e8a9a9;
+  color: #e8a9a9;
   margin-right: 4px;
   content: "#";
 }
+
 /* end */
 .text-bar {
   color: #34495e;
   margin-top: -6px;
   font-size: 22px;
 }
+
 .text-bar a {
   color: #34495e;
   letter-spacing: 10px;
 }
-.text-bar a:hover,.text-bar a:visited,.text-bar a:focus {
+
+.text-bar a:hover,
+.text-bar a:visited,
+.text-bar a:focus {
   color: #34495e;
 }
+
 .cover-image {
   background-size: cover;
   background-repeat: no-repeat;
@@ -96,28 +120,36 @@ body::before {
   -moz-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
+  transform: translateX(-50%);
   max-width: 100vw;
 }
-@media (min-width: 768px){
+
+@media (min-width: 768px) {
   .cover-image {
     height: 40vw;
     max-height: 400px;
   }
 }
+
 hr {
   border-top: 1px dashed #cfd8dc7a !important;
 }
+
 .post {
   position: relative;
 }
+
 .post-content {
   text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.1);
 }
-.post-content p,.post-content li {
+
+.post-content p,
+.post-content li {
   font-size: 16px;
   letter-spacing: .6px;
   text-align: justify;
 }
+
 .post-content figcaption {
   text-align: center;
   color: #999;
@@ -127,137 +159,161 @@ hr {
   margin-bottom: 15px;
   font-weight: 300;
 }
+
 .post-content h1 {
   font-size: 2.4em;
 }
+
 .post-content h2 {
   font-size: 1.8em;
 }
+
 .post-content h3 {
   font-size: 1.6em;
 }
+
 .post-content h4 {
   font-size: 1.2em;
   line-height: 1.5em;
-  color:#546e7a;
+  color: #546e7a;
   font-weight: 400;
 }
-.post-content h4::before{
+
+.post-content h4::before {
   position: absolute;
   left: -20px;
   font-weight: 500;
-  content: "#"; 
-  color:#e8a6a6;
+  content: "#";
+  color: #e8a6a6;
 }
+
 .post-content h5 {
   font-size: 1.1em;
   line-height: 1.5em;
-  color:#546e7a;
+  color: #546e7a;
   font-weight: normal;
 }
+
 .post-content h5::before {
   position: absolute;
   margin-top: 1px;
   left: -16px;
-  color:#546e7a;
+  color: #546e7a;
   content: "&";
   font-size: 15px;
   font-weight: 600;
 }
-.post-content h6{
-  color:#78909c;
+
+.post-content h6 {
+  color: #78909c;
   font-weight: normal;
   font-size: 1em;
   font-weight: 300;
 }
-.post-content ul li{
+
+.post-content ul li {
   text-indent: 0;
   list-style: square;
 }
-.post-content a{
+
+.post-content a {
   color: #8d6e63;
 }
-.post-content a:hover,.post-content a:focus{
+
+.post-content a:hover,
+.post-content a:focus {
   color: #bcaaa4;
 }
-.post-content ul li::before{
+
+.post-content ul li::before {
   margin-right: 5px;
 }
-.post-content ol li{
+
+.post-content ol li {
   text-indent: 0;
   margin-left: 11px;
 }
-.post-content ol li::before{
+
+.post-content ol li::before {
   margin-right: 4px;
 }
+
 .post-content blockquote {
   background-color: #FFFFFF00;
-  border:none;
-  margin:0;
-  padding:0;
+  border: none;
+  margin: 0;
+  padding: 0;
   padding: 18px 32px;
   position: relative;
   line-height: 30px;
   margin-bottom: 30px;
 }
-.post-content blockquote p{
+
+.post-content blockquote p {
   font-family: Monaco, Menlo, Consolas, "Courier New", Microsoft JhengHei, Microsoft Yahei UI, monospace;
-  margin:6px;
+  margin: 6px;
   text-indent: 0;
   color: #ef9a9a;
   font-size: 13px;
 }
+
 .post-content blockquote:before {
   font-family: 'Material-Design-Iconic-Font';
   color: #ffebee;
   content: "\f1b2";
   -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
-  font-size:2em;
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+  font-size: 2em;
   position: absolute;
   left: 8px;
   top: 12px;
   line-height: .1em;
 }
+
 .post-content blockquote:after {
   font-family: 'Material-Design-Iconic-Font';
   color: #ffebee;
   content: "\f1b2";
-  font-size:5em;
+  font-size: 5em;
   position: absolute;
   right: 8px;
   bottom: 0px;
   line-height: .1em;
 }
+
 .post-content blockquote strong {
-  font-size:15px;
+  font-size: 15px;
 }
+
 .post-content p img {
   border-radius: 6px;
-  box-shadow: 0 2px 15px 0px rgba(0,0,0,0.1);
-  display:block;
+  box-shadow: 0 2px 15px 0px rgba(0, 0, 0, 0.1);
+  display: block;
   text-align: center;
   height: auto;
   max-width: 90%;
   margin: 0 5%;
 }
-}
+
 .description p {
   font-size: 17px;
 }
+
 /* post-tags /// CSS部分来自 https://www.linpx.com/ */
 .post-tags {
   margin: 0;
   padding: 5px 0 15px;
 }
+
 .post-tags .post-list a:nth-child(1n) {
-  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.1);
-  box-shadow: 0 1px 4px rgba(0,0,0,.1);
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
   border: 1px solid #fff;
   border-radius: 15px;
   color: rgba(51, 51, 51, 0.78);
 }
+
 .post-tags .post-list a {
   margin: 4px 8px 0 0;
   font-size: 13px;
@@ -268,20 +324,24 @@ hr {
   transition-duration: .4s;
   letter-spacing: 0;
 }
+
 .post-tags .post-list a:hover {
-  color:rgb(51, 51, 51);
+  color: rgb(51, 51, 51);
 }
+
 .post-tags .tags-list a:nth-child(1n) {
-  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.1);
-  box-shadow: 0 1px 4px rgba(0,0,0,.1);
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
   border: 1px solid #fff;
   border-radius: 15px;
   color: rgba(51, 51, 51, 0.78);
 }
+
 .post-tags .tags-list a::before {
-  content:"# ";
+  content: "# ";
   color: #e8a6a6;
 }
+
 .post-tags .tags-list a {
   margin: 4px 8px 0 0;
   font-size: 12px;
@@ -292,19 +352,23 @@ hr {
   transition-duration: .4s;
   letter-spacing: 0;
 }
+
 .post-tags .tags-list a:hover {
-  color:rgb(51, 51, 51);
+  color: rgb(51, 51, 51);
 }
+
 .post-info {
   margin: 0;
   padding: 5px 0 15px;
   margin-bottom: 25px;
 }
+
 .post-info a:nth-child(1n) {
   color: #fff;
   border-radius: 15px;
   background: #f8bbd0;
 }
+
 .post-info a {
   font-size: 13px;
   font-weight: normal;
@@ -315,25 +379,30 @@ hr {
   transition-duration: .4s;
   letter-spacing: 0;
 }
+
 .post-info a:hover {
-  color:#f8bbd0;
-  background:#fff0;
+  color: #f8bbd0;
+  background: #fff0;
 }
+
 .post-info a::before {
   content: '# ';
 }
+
 .post-info .post-info-n a::before {
   content: '';
 }
+
 /* --- */
 .arc-t {
-  width:33.3%;
-  float:left;
-  position:relative;
-  min-height:1px;
-  padding-right:5px;
-  padding-left:5px;
+  width: 33.3%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 5px;
+  padding-left: 5px;
 }
+
 .arc-tile {
   line-height: 20px;
   overflow: hidden;
@@ -342,69 +411,96 @@ hr {
   position: relative;
   padding: 14px;
   margin-bottom: 20px;
-  border: 1px solid rgba(184,197,214,.2);
+  border: 1px solid rgba(184, 197, 214, .2);
   border-radius: 6px;
   background: #fff;
-  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.04);
-  box-shadow: 0 1px 4px rgba(0,0,0,.04);
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
 }
+
 .arc-date {
   color: #5f5f5f;
   font-size: 12px;
   position: relative;
 }
+
 .bottomtool {
-  margin:10px;
+  margin: 10px;
 }
-@media (max-width: 992px){
+
+@media (max-width: 992px) {
   .arc-t {
-    width:50%;
+    width: 50%;
   }
+
   .post-tor-content {
     display: none;
   }
 }
-@media (max-width: 768px){
+
+@media (max-width: 768px) {
   .arc-t {
-    width:100%;
+    width: 100%;
   }
-  .post-tor-content{
+
+  .post-tor-content {
     display: none;
   }
-  #bottomtools ul{
+
+  #bottomtools ul {
     padding: 2px;
   }
+
   .comment_reply {
     display: block !important;
   }
-  .post-content ul,.post-list,.tags-list {
+
+  .post-content ul,
+  .post-list,
+  .tags-list {
     margin-left: -1em;
     margin-right: 1em;
   }
-  .post-content h4::before{
+
+  .post-content h4::before {
     position: inherit;
     margin-right: 5px;
   }
-  .post-content h5::before{
+
+  .post-content h5::before {
     position: inherit;
     margin-right: 2px;
   }
 }
+
 .tarc-t {
-  width:90%;
-  position:relative;
-  min-height:1px;
-  padding-right:5px;
-  padding-left:5px;
+  width: 90%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 5px;
+  padding-left: 5px;
 }
+
 .tarc-tile {
-  font-size:14px;
+  font-size: 14px;
   position: relative;
   padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid rgba(184,197,214,.2);
+  border: 1px solid rgba(184, 197, 214, .2);
   border-radius: 6px;
   background: #fff;
-  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.04);
-  box-shadow: 0 1px 4px rgba(0,0,0,.04);
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
+}
+
+@media (min-width:992px) {
+  .container {
+    width: 880px !important;
+  }
+}
+
+@media (min-width:1200px) {
+  .container {
+    width: 980px !important;
+  }
 }
